--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             }
         }
         function alertText(number){
-            alert(number+' 번째 어쩌구 저쩌구');
+            alert(number+' 번째 르탄이');
         }
     </script>
 </head>
@@ -128,17 +128,17 @@
         <div class="photos">
             <div id="image1" class="photo-frame" onmouseover="hideText(1)" onmouseout="showText(1)" onclick="alertText(1)">
                 <span id="desc1" class="photo_description">
-                    첫번째 이미지
+                    안녕하세요?
                 </span>
             </div>
             <div id="image2" class="photo-frame" onmouseover="hideText(2)" onmouseout="showText(2)" onclick="alertText(2)">
                 <span id="desc2" class="photo_description">
-                    두번째 이미지
+                   반가워요!
                 </span>
             </div>
             <div id="image3" class="photo-frame" onmouseover="hideText(3)" onmouseout="showText(3)" onclick="alertText(3)">
                 <span id="desc3" class="photo_description">
-                    세번째 이미지
+                    다음에 또 봐요~
                 </span>
             </div>
             <div id="image4" class="photo-frame">
